--- a/src/app/components/account-card/account-card.component.html
+++ b/src/app/components/account-card/account-card.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card id="{{ id }}">
   <ion-card-header>
     <ion-card-subtitle>{{ accountName }}</ion-card-subtitle>
     <ion-card-title color="primary">{{ balance }}</ion-card-title>
