--- a/src/app/components/settings-list/settings-list.component.scss
+++ b/src/app/components/settings-list/settings-list.component.scss
@@ -13,3 +13,11 @@
 ion-grid {
   padding-top: 24px;
 }
+
+.button-container {
+  width: 100%;
+  display: flex;
+  padding-top: 350px;
+  justify-content: center;
+  align-items: center;
+}
