--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,12 +1,12 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon aria-hidden="true" name="albums"></ion-icon>
+      <ion-icon aria-hidden="true" name="home"></ion-icon>
       <ion-label>Account(s)</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon aria-hidden="true" name="shuffle"></ion-icon>
+      <ion-icon aria-hidden="true" name="logo-usd"></ion-icon>
       <ion-label>Pay & Transfer</ion-label>
     </ion-tab-button>
 
