chore: validations, data add etc

--- a/src/app/components/account-card/account-card.component.html
+++ b/src/app/components/account-card/account-card.component.html
@@ -1,6 +1,6 @@
 <ion-card id="{{ id }}">
   <ion-card-header>
-    <ion-card-subtitle>{{ accountName }}</ion-card-subtitle>
+    <ion-card-subtitle color="danger">{{ accountName }}</ion-card-subtitle>
     <ion-card-title color="primary">{{ balance }}</ion-card-title>
   </ion-card-header>
 </ion-card>
