--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,7 +18,7 @@
     <ion-list style="background-color: var(--ion-color-primary)">
       <app-account-card
         *ngFor="let account of accountsData"
-        (click)="openAccountDetails( account?.accountType=='Certificate of Deposit'? 'CD '+account?.maskedAccountNumber : account?.accountType+' '+account?.maskedAccountNumber, '$'+account?.accountBalance)"
+        (click)="openAccountDetails(account)"
         balance="{{'$'
         +account?.accountBalance}}"
         accountName="{{ account?.accountType+' '+account?.maskedAccountNumber}}"
@@ -42,7 +42,9 @@
   </ion-header>
   <ion-card>
     <ion-card-header>
-      <ion-card-title color="primary">{{balance}}</ion-card-title>
+      <ion-card-title color="primary"
+        >{{'$'+selectedAccount?.accountBalance}}</ion-card-title
+      >
       <ion-card-subtitle>Available Balance</ion-card-subtitle>
     </ion-card-header>
     <ion-card>
@@ -61,12 +63,14 @@
           <ion-item>
             <ion-label class="label">Account Number:</ion-label>
             <ion-label class="value" slot="end"
-              >123456{{accountName?.slice(-4)}}</ion-label
+              >{{selectedAccount?.accountNumber}}</ion-label
             >
           </ion-item>
           <ion-item>
             <ion-label class="label">Routing Number:</ion-label>
-            <ion-label class="value" slot="end">987654321</ion-label>
+            <ion-label class="value" slot="end"
+              >{{selectedAccount?.routingNumber}}</ion-label
+            >
           </ion-item>
         </ion-card-content>
       </div>
