--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -76,7 +76,9 @@
       </div>
     </ion-card>
 
-    <ion-card-content>
+    <ion-card-content
+      *ngIf="selectedAccount?.accountType!='Certificate of Deposit'"
+    >
       <ion-list>
         <ion-item
           *ngFor="let transaction of transactionData"
