--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -61,13 +61,13 @@
       <div [@expandCollapse]="detailsShown ? 'expanded' : 'collapsed'">
         <ion-card-content class="content">
           <ion-item>
-            <ion-label class="label">Account Number:</ion-label>
+            <ion-label class="label">Account Number</ion-label>
             <ion-label class="value" slot="end"
               >{{selectedAccount?.accountNumber}}</ion-label
             >
           </ion-item>
           <ion-item>
-            <ion-label class="label">Routing Number:</ion-label>
+            <ion-label class="label">Routing Number</ion-label>
             <ion-label class="value" slot="end"
               >{{selectedAccount?.routingNumber}}</ion-label
             >
